Pizza API working

--- a/PizzaMenuManager/src/PizzaMenu.API/appsettings.json
+++ b/PizzaMenuManager/src/PizzaMenu.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DataSource": {
+    "ConnectionString": "Server=RON-DELL;Initial Catalog=PizzaMenuManager;User Id=sa;Password=123mana"
+  }
 }
